# serializer version: 1
# name: TestLCSSequenceMetric.test_collect_as_dict_with_snapshot[event]
  dict({
    tuple(
      1,
      1,
    ): 7.0,
    tuple(
      1,
      2,
    ): 1.0,
    tuple(
      1,
      3,
    ): 1.0,
    tuple(
      1,
      4,
    ): 2.0,
    tuple(
      1,
      5,
    ): 1.0,
    tuple(
      1,
      6,
    ): 2.0,
    tuple(
      1,
      7,
    ): 1.0,
    tuple(
      1,
      8,
    ): 0.0,
    tuple(
      1,
      9,
    ): 1.0,
    tuple(
      1,
      10,
    ): 1.0,
    tuple(
      2,
      1,
    ): 1.0,
    tuple(
      2,
      2,
    ): 14.0,
    tuple(
      2,
      3,
    ): 2.0,
    tuple(
      2,
      4,
    ): 3.0,
    tuple(
      2,
      5,
    ): 4.0,
    tuple(
      2,
      6,
    ): 2.0,
    tuple(
      2,
      7,
    ): 1.0,
    tuple(
      2,
      8,
    ): 2.0,
    tuple(
      2,
      9,
    ): 1.0,
    tuple(
      2,
      10,
    ): 1.0,
    tuple(
      3,
      1,
    ): 1.0,
    tuple(
      3,
      2,
    ): 2.0,
    tuple(
      3,
      3,
    ): 11.0,
    tuple(
      3,
      4,
    ): 2.0,
    tuple(
      3,
      5,
    ): 1.0,
    tuple(
      3,
      6,
    ): 3.0,
    tuple(
      3,
      7,
    ): 2.0,
    tuple(
      3,
      8,
    ): 1.0,
    tuple(
      3,
      9,
    ): 3.0,
    tuple(
      3,
      10,
    ): 1.0,
    tuple(
      4,
      1,
    ): 2.0,
    tuple(
      4,
      2,
    ): 3.0,
    tuple(
      4,
      3,
    ): 2.0,
    tuple(
      4,
      4,
    ): 11.0,
    tuple(
      4,
      5,
    ): 3.0,
    tuple(
      4,
      6,
    ): 3.0,
    tuple(
      4,
      7,
    ): 1.0,
    tuple(
      4,
      8,
    ): 1.0,
    tuple(
      4,
      9,
    ): 3.0,
    tuple(
      4,
      10,
    ): 1.0,
    tuple(
      5,
      1,
    ): 1.0,
    tuple(
      5,
      2,
    ): 4.0,
    tuple(
      5,
      3,
    ): 1.0,
    tuple(
      5,
      4,
    ): 3.0,
    tuple(
      5,
      5,
    ): 13.0,
    tuple(
      5,
      6,
    ): 2.0,
    tuple(
      5,
      7,
    ): 1.0,
    tuple(
      5,
      8,
    ): 1.0,
    tuple(
      5,
      9,
    ): 1.0,
    tuple(
      5,
      10,
    ): 1.0,
    tuple(
      6,
      1,
    ): 2.0,
    tuple(
      6,
      2,
    ): 2.0,
    tuple(
      6,
      3,
    ): 3.0,
    tuple(
      6,
      4,
    ): 3.0,
    tuple(
      6,
      5,
    ): 2.0,
    tuple(
      6,
      6,
    ): 11.0,
    tuple(
      6,
      7,
    ): 1.0,
    tuple(
      6,
      8,
    ): 0.0,
    tuple(
      6,
      9,
    ): 1.0,
    tuple(
      6,
      10,
    ): 0.0,
    tuple(
      7,
      1,
    ): 1.0,
    tuple(
      7,
      2,
    ): 1.0,
    tuple(
      7,
      3,
    ): 2.0,
    tuple(
      7,
      4,
    ): 1.0,
    tuple(
      7,
      5,
    ): 1.0,
    tuple(
      7,
      6,
    ): 1.0,
    tuple(
      7,
      7,
    ): 6.0,
    tuple(
      7,
      8,
    ): 1.0,
    tuple(
      7,
      9,
    ): 1.0,
    tuple(
      7,
      10,
    ): 1.0,
    tuple(
      8,
      1,
    ): 0.0,
    tuple(
      8,
      2,
    ): 2.0,
    tuple(
      8,
      3,
    ): 1.0,
    tuple(
      8,
      4,
    ): 1.0,
    tuple(
      8,
      5,
    ): 1.0,
    tuple(
      8,
      6,
    ): 0.0,
    tuple(
      8,
      7,
    ): 1.0,
    tuple(
      8,
      8,
    ): 4.0,
    tuple(
      8,
      9,
    ): 1.0,
    tuple(
      8,
      10,
    ): 1.0,
    tuple(
      9,
      1,
    ): 1.0,
    tuple(
      9,
      2,
    ): 1.0,
    tuple(
      9,
      3,
    ): 3.0,
    tuple(
      9,
      4,
    ): 3.0,
    tuple(
      9,
      5,
    ): 1.0,
    tuple(
      9,
      6,
    ): 1.0,
    tuple(
      9,
      7,
    ): 1.0,
    tuple(
      9,
      8,
    ): 1.0,
    tuple(
      9,
      9,
    ): 7.0,
    tuple(
      9,
      10,
    ): 1.0,
    tuple(
      10,
      1,
    ): 1.0,
    tuple(
      10,
      2,
    ): 1.0,
    tuple(
      10,
      3,
    ): 1.0,
    tuple(
      10,
      4,
    ): 1.0,
    tuple(
      10,
      5,
    ): 1.0,
    tuple(
      10,
      6,
    ): 0.0,
    tuple(
      10,
      7,
    ): 1.0,
    tuple(
      10,
      8,
    ): 1.0,
    tuple(
      10,
      9,
    ): 1.0,
    tuple(
      10,
      10,
    ): 11.0,
  })
# ---
# name: TestLCSSequenceMetric.test_collect_as_dict_with_snapshot[interval]
  dict({
    tuple(
      1,
      1,
    ): 4.0,
    tuple(
      1,
      2,
    ): 1.0,
    tuple(
      1,
      3,
    ): 0.0,
    tuple(
      1,
      4,
    ): 0.0,
    tuple(
      1,
      5,
    ): 0.0,
    tuple(
      1,
      6,
    ): 0.0,
    tuple(
      1,
      7,
    ): 0.0,
    tuple(
      1,
      8,
    ): 0.0,
    tuple(
      1,
      9,
    ): 0.0,
    tuple(
      1,
      10,
    ): 0.0,
    tuple(
      2,
      1,
    ): 1.0,
    tuple(
      2,
      2,
    ): 5.0,
    tuple(
      2,
      3,
    ): 0.0,
    tuple(
      2,
      4,
    ): 0.0,
    tuple(
      2,
      5,
    ): 1.0,
    tuple(
      2,
      6,
    ): 1.0,
    tuple(
      2,
      7,
    ): 0.0,
    tuple(
      2,
      8,
    ): 0.0,
    tuple(
      2,
      9,
    ): 2.0,
    tuple(
      2,
      10,
    ): 1.0,
    tuple(
      3,
      1,
    ): 0.0,
    tuple(
      3,
      2,
    ): 0.0,
    tuple(
      3,
      3,
    ): 3.0,
    tuple(
      3,
      4,
    ): 0.0,
    tuple(
      3,
      5,
    ): 0.0,
    tuple(
      3,
      6,
    ): 0.0,
    tuple(
      3,
      7,
    ): 0.0,
    tuple(
      3,
      8,
    ): 0.0,
    tuple(
      3,
      9,
    ): 0.0,
    tuple(
      3,
      10,
    ): 0.0,
    tuple(
      4,
      1,
    ): 0.0,
    tuple(
      4,
      2,
    ): 0.0,
    tuple(
      4,
      3,
    ): 0.0,
    tuple(
      4,
      4,
    ): 6.0,
    tuple(
      4,
      5,
    ): 0.0,
    tuple(
      4,
      6,
    ): 0.0,
    tuple(
      4,
      7,
    ): 1.0,
    tuple(
      4,
      8,
    ): 1.0,
    tuple(
      4,
      9,
    ): 0.0,
    tuple(
      4,
      10,
    ): 1.0,
    tuple(
      5,
      1,
    ): 0.0,
    tuple(
      5,
      2,
    ): 1.0,
    tuple(
      5,
      3,
    ): 0.0,
    tuple(
      5,
      4,
    ): 0.0,
    tuple(
      5,
      5,
    ): 5.0,
    tuple(
      5,
      6,
    ): 1.0,
    tuple(
      5,
      7,
    ): 0.0,
    tuple(
      5,
      8,
    ): 0.0,
    tuple(
      5,
      9,
    ): 0.0,
    tuple(
      5,
      10,
    ): 1.0,
    tuple(
      6,
      1,
    ): 0.0,
    tuple(
      6,
      2,
    ): 1.0,
    tuple(
      6,
      3,
    ): 0.0,
    tuple(
      6,
      4,
    ): 0.0,
    tuple(
      6,
      5,
    ): 1.0,
    tuple(
      6,
      6,
    ): 7.0,
    tuple(
      6,
      7,
    ): 0.0,
    tuple(
      6,
      8,
    ): 0.0,
    tuple(
      6,
      9,
    ): 0.0,
    tuple(
      6,
      10,
    ): 1.0,
    tuple(
      7,
      1,
    ): 0.0,
    tuple(
      7,
      2,
    ): 0.0,
    tuple(
      7,
      3,
    ): 0.0,
    tuple(
      7,
      4,
    ): 1.0,
    tuple(
      7,
      5,
    ): 0.0,
    tuple(
      7,
      6,
    ): 0.0,
    tuple(
      7,
      7,
    ): 2.0,
    tuple(
      7,
      8,
    ): 0.0,
    tuple(
      7,
      9,
    ): 0.0,
    tuple(
      7,
      10,
    ): 1.0,
    tuple(
      8,
      1,
    ): 0.0,
    tuple(
      8,
      2,
    ): 0.0,
    tuple(
      8,
      3,
    ): 0.0,
    tuple(
      8,
      4,
    ): 1.0,
    tuple(
      8,
      5,
    ): 0.0,
    tuple(
      8,
      6,
    ): 0.0,
    tuple(
      8,
      7,
    ): 0.0,
    tuple(
      8,
      8,
    ): 6.0,
    tuple(
      8,
      9,
    ): 0.0,
    tuple(
      8,
      10,
    ): 0.0,
    tuple(
      9,
      1,
    ): 0.0,
    tuple(
      9,
      2,
    ): 2.0,
    tuple(
      9,
      3,
    ): 0.0,
    tuple(
      9,
      4,
    ): 0.0,
    tuple(
      9,
      5,
    ): 0.0,
    tuple(
      9,
      6,
    ): 0.0,
    tuple(
      9,
      7,
    ): 0.0,
    tuple(
      9,
      8,
    ): 0.0,
    tuple(
      9,
      9,
    ): 4.0,
    tuple(
      9,
      10,
    ): 0.0,
    tuple(
      10,
      1,
    ): 0.0,
    tuple(
      10,
      2,
    ): 1.0,
    tuple(
      10,
      3,
    ): 0.0,
    tuple(
      10,
      4,
    ): 1.0,
    tuple(
      10,
      5,
    ): 1.0,
    tuple(
      10,
      6,
    ): 1.0,
    tuple(
      10,
      7,
    ): 1.0,
    tuple(
      10,
      8,
    ): 0.0,
    tuple(
      10,
      9,
    ): 0.0,
    tuple(
      10,
      10,
    ): 4.0,
  })
# ---
# name: TestLCSSequenceMetric.test_collect_as_dict_with_snapshot[state]
  dict({
    tuple(
      1,
      1,
    ): 1.0,
    tuple(
      1,
      2,
    ): 0.0,
    tuple(
      1,
      3,
    ): 0.0,
    tuple(
      1,
      4,
    ): 0.0,
    tuple(
      1,
      5,
    ): 0.0,
    tuple(
      1,
      6,
    ): 0.0,
    tuple(
      1,
      7,
    ): 1.0,
    tuple(
      1,
      8,
    ): 0.0,
    tuple(
      1,
      9,
    ): 0.0,
    tuple(
      1,
      10,
    ): 1.0,
    tuple(
      2,
      1,
    ): 0.0,
    tuple(
      2,
      2,
    ): 2.0,
    tuple(
      2,
      3,
    ): 0.0,
    tuple(
      2,
      4,
    ): 0.0,
    tuple(
      2,
      5,
    ): 0.0,
    tuple(
      2,
      6,
    ): 0.0,
    tuple(
      2,
      7,
    ): 0.0,
    tuple(
      2,
      8,
    ): 0.0,
    tuple(
      2,
      9,
    ): 0.0,
    tuple(
      2,
      10,
    ): 0.0,
    tuple(
      3,
      1,
    ): 0.0,
    tuple(
      3,
      2,
    ): 0.0,
    tuple(
      3,
      3,
    ): 3.0,
    tuple(
      3,
      4,
    ): 1.0,
    tuple(
      3,
      5,
    ): 0.0,
    tuple(
      3,
      6,
    ): 0.0,
    tuple(
      3,
      7,
    ): 0.0,
    tuple(
      3,
      8,
    ): 0.0,
    tuple(
      3,
      9,
    ): 0.0,
    tuple(
      3,
      10,
    ): 1.0,
    tuple(
      4,
      1,
    ): 0.0,
    tuple(
      4,
      2,
    ): 0.0,
    tuple(
      4,
      3,
    ): 1.0,
    tuple(
      4,
      4,
    ): 2.0,
    tuple(
      4,
      5,
    ): 0.0,
    tuple(
      4,
      6,
    ): 1.0,
    tuple(
      4,
      7,
    ): 0.0,
    tuple(
      4,
      8,
    ): 0.0,
    tuple(
      4,
      9,
    ): 0.0,
    tuple(
      4,
      10,
    ): 1.0,
    tuple(
      5,
      1,
    ): 0.0,
    tuple(
      5,
      2,
    ): 0.0,
    tuple(
      5,
      3,
    ): 0.0,
    tuple(
      5,
      4,
    ): 0.0,
    tuple(
      5,
      5,
    ): 2.0,
    tuple(
      5,
      6,
    ): 1.0,
    tuple(
      5,
      7,
    ): 0.0,
    tuple(
      5,
      8,
    ): 0.0,
    tuple(
      5,
      9,
    ): 1.0,
    tuple(
      5,
      10,
    ): 0.0,
    tuple(
      6,
      1,
    ): 0.0,
    tuple(
      6,
      2,
    ): 0.0,
    tuple(
      6,
      3,
    ): 0.0,
    tuple(
      6,
      4,
    ): 1.0,
    tuple(
      6,
      5,
    ): 1.0,
    tuple(
      6,
      6,
    ): 4.0,
    tuple(
      6,
      7,
    ): 0.0,
    tuple(
      6,
      8,
    ): 0.0,
    tuple(
      6,
      9,
    ): 1.0,
    tuple(
      6,
      10,
    ): 0.0,
    tuple(
      7,
      1,
    ): 1.0,
    tuple(
      7,
      2,
    ): 0.0,
    tuple(
      7,
      3,
    ): 0.0,
    tuple(
      7,
      4,
    ): 0.0,
    tuple(
      7,
      5,
    ): 0.0,
    tuple(
      7,
      6,
    ): 0.0,
    tuple(
      7,
      7,
    ): 4.0,
    tuple(
      7,
      8,
    ): 0.0,
    tuple(
      7,
      9,
    ): 0.0,
    tuple(
      7,
      10,
    ): 1.0,
    tuple(
      8,
      1,
    ): 0.0,
    tuple(
      8,
      2,
    ): 0.0,
    tuple(
      8,
      3,
    ): 0.0,
    tuple(
      8,
      4,
    ): 0.0,
    tuple(
      8,
      5,
    ): 0.0,
    tuple(
      8,
      6,
    ): 0.0,
    tuple(
      8,
      7,
    ): 0.0,
    tuple(
      8,
      8,
    ): 1.0,
    tuple(
      8,
      9,
    ): 0.0,
    tuple(
      8,
      10,
    ): 0.0,
    tuple(
      9,
      1,
    ): 0.0,
    tuple(
      9,
      2,
    ): 0.0,
    tuple(
      9,
      3,
    ): 0.0,
    tuple(
      9,
      4,
    ): 0.0,
    tuple(
      9,
      5,
    ): 1.0,
    tuple(
      9,
      6,
    ): 1.0,
    tuple(
      9,
      7,
    ): 0.0,
    tuple(
      9,
      8,
    ): 0.0,
    tuple(
      9,
      9,
    ): 1.0,
    tuple(
      9,
      10,
    ): 0.0,
    tuple(
      10,
      1,
    ): 1.0,
    tuple(
      10,
      2,
    ): 0.0,
    tuple(
      10,
      3,
    ): 1.0,
    tuple(
      10,
      4,
    ): 1.0,
    tuple(
      10,
      5,
    ): 0.0,
    tuple(
      10,
      6,
    ): 0.0,
    tuple(
      10,
      7,
    ): 1.0,
    tuple(
      10,
      8,
    ): 0.0,
    tuple(
      10,
      9,
    ): 0.0,
    tuple(
      10,
      10,
    ): 2.0,
  })
# ---
# name: TestLCSSequenceMetric.test_collect_as_matrix_with_snapshot[event]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,7.0,1.0,1.0,2.0,1.0,2.0,1.0,0.0,1.0,1.0
  2,1.0,14.0,2.0,3.0,4.0,2.0,1.0,2.0,1.0,1.0
  3,1.0,2.0,11.0,2.0,1.0,3.0,2.0,1.0,3.0,1.0
  4,2.0,3.0,2.0,11.0,3.0,3.0,1.0,1.0,3.0,1.0
  5,1.0,4.0,1.0,3.0,13.0,2.0,1.0,1.0,1.0,1.0
  6,2.0,2.0,3.0,3.0,2.0,11.0,1.0,0.0,1.0,0.0
  7,1.0,1.0,2.0,1.0,1.0,1.0,6.0,1.0,1.0,1.0
  8,0.0,2.0,1.0,1.0,1.0,0.0,1.0,4.0,1.0,1.0
  9,1.0,1.0,3.0,3.0,1.0,1.0,1.0,1.0,7.0,1.0
  10,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0,11.0
  
  '''
# ---
# name: TestLCSSequenceMetric.test_collect_as_matrix_with_snapshot[interval]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,4.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
  2,1.0,5.0,0.0,0.0,1.0,1.0,0.0,0.0,2.0,1.0
  3,0.0,0.0,3.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
  4,0.0,0.0,0.0,6.0,0.0,0.0,1.0,1.0,0.0,1.0
  5,0.0,1.0,0.0,0.0,5.0,1.0,0.0,0.0,0.0,1.0
  6,0.0,1.0,0.0,0.0,1.0,7.0,0.0,0.0,0.0,1.0
  7,0.0,0.0,0.0,1.0,0.0,0.0,2.0,0.0,0.0,1.0
  8,0.0,0.0,0.0,1.0,0.0,0.0,0.0,6.0,0.0,0.0
  9,0.0,2.0,0.0,0.0,0.0,0.0,0.0,0.0,4.0,0.0
  10,0.0,1.0,0.0,1.0,1.0,1.0,1.0,0.0,0.0,4.0
  
  '''
# ---
# name: TestLCSSequenceMetric.test_collect_as_matrix_with_snapshot[state]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,1.0,0.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0,1.0
  2,0.0,2.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
  3,0.0,0.0,3.0,1.0,0.0,0.0,0.0,0.0,0.0,1.0
  4,0.0,0.0,1.0,2.0,0.0,1.0,0.0,0.0,0.0,1.0
  5,0.0,0.0,0.0,0.0,2.0,1.0,0.0,0.0,1.0,0.0
  6,0.0,0.0,0.0,1.0,1.0,4.0,0.0,0.0,1.0,0.0
  7,1.0,0.0,0.0,0.0,0.0,0.0,4.0,0.0,0.0,1.0
  8,0.0,0.0,0.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0
  9,0.0,0.0,0.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0
  10,1.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0,0.0,2.0
  
  '''
# ---
